* ext/bigdecimal/bigdecimal.h (RB_UNUSED_VAR, UNREACHABLE):   import macros from ruby.h for 1.9.3.   [Bug #8588] [ruby-core:55730]

* ext/bigdecimal/bigdecimal.gemspec: Bump version to 1.2.1.

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@41725 b2dd03c8-39d4-4d8f-98ff-823fe69b080e